css/styles.css
/* ... */
.subscribe-form {
    width: 270px;
}

.footer-copyright {
    margin-top: 28px;
    margin-bottom: 0px;
    padding-top: 18px;
    padding-bottom: 21px;

    color: rgba(255, 255, 255, 0.4);

    font-family: Roboto, sans-serif;
    font-size: 12px;
    line-height: 2;
    text-align: center;
    letter-spacing: 0.03em;

    border-top: 1px solid rgba(255, 255, 255, 0.1);
}

/*Portfolio section */
.portfolio-section {
    padding-bottom: 94px;
    padding-top: 94px;
}

.portfolio-heading {
    display: none;
}

.portfolio-work-type-chooser {
    display: flex;
    justify-content: center;
    padding: 0;
}

.portfolio-work-type-chooser .item + .item {
    margin-left: 8px;
}

.portfolio-section-button {
    margin: 0;
    border: none;

    padding: 6px 22px;

    color: var(--secondary-text-color);
    background-color: #f5f4fa;

    font-family: Roboto, sans-serif;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.63;
    text-align: center;
    letter-spacing: 0.03em;

    border-radius: 4px;
}

/*Work list*/
.work-list {
    padding: 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.work-list .item {
    /* Sorry mentor */
    --grid-padding: 30px;
    --column-count: 3;

    width: calc(((100% - calc(var(--column-count) - 1)*var(--grid-padding)) / var(--column-count)));
    margin-right: var(--grid-padding);
    margin-top: var(--grid-padding);

    border: 1px solid #EEEEEE;
}

.work-list .item:hover {
    box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
    cursor: pointer;
}

.work-list .item:nth-child(3n) {
    margin-right: 0;
}

.work-item-title {
    margin-left: 24px;
    margin-bottom: 20px;
}

.work-list .item .image {
    display: block;
    max-width: 100%;
}

.portfolio-section-button:hover,
.portfolio-section-button:active {
    color: #ffffff;
    background-color: var(--accent);
    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
    cursor: pointer;
}

.portfolio-section a {
    text-decoration: none;
}

.portfolio-section-card-title {
    margin-top: 20px;
    margin-bottom: 0px;

    color: var(--secondary-text-color);

    font-family: Roboto, sans-serif;
    font-weight: 700;
    font-size: 18px;
    line-height: 2;
    letter-spacing: 0.06em;
    text-align: start;
}

.portfolio-section-card-category {
    margin-top: 4px;
    margin-bottom: 0px;

    color: var(--primary-text-color);

    font-family: Roboto, sans-serif;
    font-size: 16px;
    line-height: 1.88;
    letter-spacing: 0.03em;
}

.portfolio-section-card-description {
    display: none; /*Temp disable */

    color: #ffffff;

    font-family: Roboto, sans-serif;
    font-size: 18px;
    line-height: 1.56;
    letter-spacing: 0.03em;
}

h2 {
    font-family: Roboto, sans-serif;
    font-weight: 700;
    font-size: 36px;
    line-height: 1.17;
    letter-spacing: 0.03em;
    text-align: center;
}

